# Bombic

./: .gitignore  AUTHORS  CHYBY.md  CLAUDE.md  CMakeLists.txt  LAN_BUGS.md  LAN_FIXES.md  LAN_SYNC_FIXES.md  README.md  build.sh  install  install.sh
cmake/: config.h.in
data/: cz-utf8.txt  de-utf8.txt  en.txt  langid.txt  pl-utf8.txt
data/font/: Makefile.am
data/samples/: Makefile.am
doc/: manual_cz.html  manual_de.html  manual_en.html
src/: CMakeLists.txt  Config.cpp  Config.h  D3DXApp.cpp  D3DXApp.h  GBase.cpp  GBase.h  GBomba.cpp  GBomba.h  GBombaMega.cpp  GBombaMega.h  GBombaNapalm.cpp  GBombaNapalm.h  GBomber.cpp  GBomber.h  GBomber_n_randkicker.h  GBonus.cpp  GBonus.h  GBonus_bomb.cpp  GBonus_bomb.h  GBonus_fire.cpp  GBonus_fire.h  GBonus_fireman.cpp  GBonus_fireman.h  GBonus_kicker.cpp  GBonus_kicker.h  GBonus_live.cpp  GBonus_live.h  GBonus_megabomb.cpp  GBonus_megabomb.h  GBonus_n_berserk.cpp  GBonus_n_berserk.h  GBonus_n_dement.cpp  GBonus_n_dement.h  GBonus_n_kicker.cpp  GBonus_n_kicker.h  GBonus_n_nobomb.cpp  GBonus_n_nobomb.h  GBonus_n_slow.cpp  GBonus_n_slow.h  (+102 more)
