dist_pkgdata_DATA = \
bomba.wav \
bonus.wav \
bonus_casovy.wav \
B1.wav \
B2.wav \
B3.wav \
B4.wav \
B5.wav \
megabomba.wav \
smrt.wav \
test.wav \
_menu1.wav \
_menu2.wav \
_napalm.wav \
_polozeni_bomby.wav \
_smrt_dudlik.wav \
_smrt_koule.wav \
_smrt_mesicka.wav \
_smrt_slizky.wav \
_smrt1.wav \
_smrt2.wav
